starting the first post

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Projeto_11_Tweteroo",
+  "name": "Projeto_11npm_Tweteroo",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,7 @@
   },
   "homepage": "https://github.com/carolyza/Tweteroo#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
